<resources>
    <string name="app_name">Appberdi</string>
    <string name="indicaciones">Indicaciones</string>
    <string name="est_s_en">Estás en:</string>
    <string name="permission_storage_required">
        ¡Para poder descargar contenidos necesito permisos de almacenamiento!
    </string>
    <string name="permission_location_required">
        ¡La parte mas interesante de la app no va a andar sin el permiso de ubicación!
    </string>
    <string name="permission_background_required">
        Algunas funciones no van a andar sin el permiso de ubicación activado todo el tiempo.
    </string>
    <string name="permission_default_required">
        Por favor, editá los permisos de la aplicación.
    </string>
    <string name="permission_denied">No pudimos habilitar el permiso.</string>
    <string name="change">Cambiar</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Configuración</string>
    <string name="sitios">Lugares:</string>
    <string name="input_name">Decinos tu nombre</string>
    <string name="guardar">Guardar</string>
    <string name="finalizar">Finalizar</string>
    <string name="entrar">Entrar</string>
    <string name="progreso">Progreso</string>
    <string name="sitios_recorridos">Lugares recorridos</string>
    <string name="reproducci_n_autom_tica_de_audio">Reproducir audio al toque</string>
    <string name="reproducci_n_autom_tica_de_video">Reproducir video al toque</string>
    <string name="l_mite_de_almacenamiento_sin_l_mite">Límite de almacenamiento: Sin límite</string>
    <string name="l_mite_de_datos_sin_l_mite">Límite de datos: Sin límite</string>
    <string name="limit_storage">No te recomendamos establecer un límite de almacenamiento muy pequeño, ya que no podremos almacenar los datos obtenidos de la nube y se volverán a descargar cada vez que visites un lugar.</string>
    <string name="limit_data">No te recomendamos establecer un límite de datos muy pequeño, ya que es posible que no puedas obtener los recursos multimedia necesarios para navegar por Alberdi.</string>
    <string name="uso_de_datos">Uso de datos</string>
    <string name="borrar">Borrar</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="avatar">Avatar</string>
    <string name="str_clear_data">Borrar los datos almacenados implica que cuando visites un lugar de nuevo estos deberán ser descargados otra vez, por lo que se volverán a consumir tus datos móviles. Podés seleccionar qué datos borrar.</string>
    <string name="borrar_datos_almacenados">Borrar datos almacenados: %1$.2fMB</string>
    <string name="clear_title">Borrar datos almacenados</string>
    <string name="clear_finish_text">%1$.2fMB se van a borrar y vas a tener que descargarlos de nuevo.</string>
    <string name="clear_button">Borrar %1$.2fMB</string>
    <string name="howToGet">¿Cómo llegar?</string>
    <string name="horarios">Horarios:</string>
    <string name="redes_sociales">Redes sociales:</string>
    <string name="site_video_duration">%1$s minutos de duración</string>
    <string name="mediateca_title">Mediateca de Alberdi</string>
    <string name="cultural_activities_title">Actividades de Alberdi</string>
    <string name="imagen">imagen</string>
    <string name="como_llegar">¿Cómo llegar?</string>
    <string name="unit_mb">%1$.2fMB</string>
    <string name="channel_description">Notificación cuando se ejecuta el paseo</string>
    <string name="channel_name">Paseo por Alberdi</string>
    <string name="iniciar_recorrido">Iniciar recorrido</string>
    <string name="continuar_recorrido">Continuar recorrido</string>
    <string name="mediateca">mediateca</string>
    <string name="actividades">actividades</string>
    <string name="preferencias">Preferencias</string>
    <string name="quienes_somos">Quiénes somos</string>
    <string name="tesoros_encontrados">Tesoros encontrados</string>
    <string name="borrar_todo_el_progreso">Borrar todo el progreso</string>
    <string name="siguiente">Siguiente</string>
    <string name="palabras">Palabras</string>
    <string name="imagen_de_apoyo">Imagen de apoyo</string>
    <string name="transcripci_n">Transcripción</string>
    <string name="descripci_n">Descripción</string>
    <string name="resumen_de_lo_vivido">¡Eso es todo por ahora! Mirá un resumen de lo que viviste:</string>
    <string name="gracias_por_tu_visita">¡Gracias por tu visita!</string>
    <string name="play_al_video">Comenzar el video</string>
    <string name="desarrollada_por">
        Una app desarrollada por estudiantes de la Universidad Nacional de Córdoba
        en el marco del proyecto extensionista “Una App para Pueblo Alberdi” de la
        Secretaría de Extensión de la UNC y la Facultad de Ciencias Exactas, Físicas y Naturales,
        en conjunto con la Red Pueblo Alberdi.
    </string>
    <string name="y_albi">¡Y Albi!</string>
    <string name="welcome">Hola %1$s, soy Albi.\n¡Vamos a recorrer el barrio!</string>
    <string name="ingrese_titulo">"Ingrese título o descripción"</string>
    <string name="pensando">Pensando…</string>
    <string name="pensando_virtual">Seleccioná un sitio para visitarlo</string>
    <string name="sitio_mas_cercano">"Lugar más cercano:"</string>
    <string name="estas_a">"Estás más o menos a %1$d metros"</string>
    <string name="limite_almacenamiento">Límite de almacenamiento: %1$d MB.</string>
    <string name="limite_datos">Límite de datos: %1$d MB.</string>
    <string name="progress_site">%1$d/%2$d</string>
    <string name="selecciona_avatar">¡Seleccioná el avatar que más te guste!</string>
    <string name="audio_habilitado">Se habilitó la reproducción automática de audio.</string>
    <string name="volver">Volver</string>
    <string name="opciones_title">Opciones del recorrido</string>
    <string name="opciones_virtual_on">modo virtual</string>
    <string name="opciones_virtual_on_desc">Si no puedes dirigirte presencialmente hasta los lugares, prueba usar el modo recorrido virtual.</string>
    <string name="opciones_stop">Detener el recorrido</string>
    <string name="opciones_stop_desc">Suficiente por hoy, detener el recorrido (se guardará los sitios que ya visitaste)</string>
</resources>