<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:id="@+id/header"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="90dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:padding="8dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/astronaut_dog" />

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/background_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/opciones_title"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <LinearLayout
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <View
            android:layout_width="600dp"
            android:layout_height="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_virtual_mode"
            style="@style/AppWidget.IconButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/opciones_virtual_on"
            android:textColor="@color/cab400"
            app:icon="@drawable/ic_gps_off"
            app:iconTint="@color/cab400" />

        <TextView
            android:id="@+id/tv_virtual_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/montserrat_regular"
            android:justificationMode="inter_word"
            android:text="@string/opciones_virtual_on_desc"
            android:textSize="12sp" />

        <Button
            android:id="@+id/stop_tour"
            style="@style/AppWidget.IconButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/opciones_stop"
            app:icon="@drawable/ic_close"
            app:iconTint="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/montserrat_regular"
            android:justificationMode="inter_word"
            android:text="@string/opciones_stop_desc"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button"
            style="@style/AppWidget.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/volver" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>