<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.attractions.AttractionActivity"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:importantForAccessibility="no"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lobstertwo_bold"
                android:paddingHorizontal="16dp"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_light"
                android:paddingHorizontal="16dp"
                android:textColor="@color/white"
                tools:text="@tools:sample/lorem" />


            <com.jackemate.appberdi.ui.shared.TitleView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:paddingHorizontal="16dp"
                android:textColor="@color/white"
                app:title="@string/horarios" />


            <TextView
                android:id="@+id/horarios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/montserrat_regular"
                android:paddingHorizontal="16dp"
                android:textColor="@color/white"
                tools:text="Lunes: 8:00-12:00\nMartes: 8:00-12:00" />

            <com.jackemate.appberdi.ui.shared.TitleView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:paddingHorizontal="16dp"
                android:textColor="@color/white"
                app:title="@string/redes_sociales" />

            <LinearLayout
                android:id="@+id/social_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/howToGet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/black"
        android:text="@string/como_llegar"
        android:textColor="@color/white"
        app:icon="@drawable/ic_map"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>